controller/test/e2e/testdata/backendtls/secret-base.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-secret-route
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "secret.example.com"
  rules:
  - backendRefs:
    - name: backend
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: tls-policy-secret
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: backend
  validation:
    hostname: "localhost"
    caCertificateRefs:
    - group: ""
      kind: Secret
      name: ca-secret
